--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,11 @@
   <!-- Html5-QRCode Library for Web (代替用) -->
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+  
   <style>
     /* バーコードスキャナーのスタイル */
     #html5-qrcode-reader {
