🔥 Firebase Web初期化修正: index.htmlでJS初期化、Web/Android別初期化

--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,28 @@
   <!-- Html5-QRCode Library for Web (代替用) -->
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  
+  <!-- Firebase Configuration -->
+  <script>
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAAak1Xn9NM0rhhmLsLT7FOxdHSbzrJcK0",
+      authDomain: "saisunsatsuei-950cf.firebaseapp.com",
+      projectId: "saisunsatsuei-950cf",
+      storageBucket: "saisunsatsuei-950cf.firebasestorage.app",
+      messagingSenderId: "788734188363",
+      appId: "1:788734188363:web:9a8c2c8f89f4554bdda6ce",
+      measurementId: "G-S94RCKLC4M"
+    };
+    
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  
   <style>
     /* バーコードスキャナーのスタイル */
     #html5-qrcode-reader {
