🎉 Major refactor: DetailScreen分割とコード品質改善
✨ 新機能:
- ImageUploadCoordinator: 画像アップロード調整（既存/新規画像の区別、重複除去）
- ImageDiffManager: 差分削除管理（通常/白抜き/マスク画像の削除）
- InventorySaver: Hive + D1保存（リトライ機能付き）

🔧 改善:
- DetailScreen: 1783行 → 1605行（-10%）
- _saveProductメソッド: 400行 → 200行（-50%削減）
- 画像重複バグ修正: BatchImageUploadServiceが既存画像を重複追加していた問題を解決
- コード責任の明確化: アップロード、削除、保存が独立クラスに分離
- テスト容易性向上: 各ロジックが単体テストできる構造に
- エラー局所化: 問題の特定と修正が容易に

🗂️ フォルダ構造:
- lib/features/inventory/logic/ - ビジネスロジック層
- lib/features/inventory/screens/ - UI層
- 責任の分離とメンテナンス性の大幅向上

🐛 バグ修正:
- 画像が2倍に増殖する問題を完全解決
- 既存画像の適切なスキップ処理
- 重複除去ロジックの強化

📊 影響:
- 長期的なメンテナンス性が大幅に向上
- 新機能追加が容易に
- エラーの再発防止

--- a/web/index.html
+++ b/web/index.html
@@ -40,26 +40,34 @@
   <!-- Html5-QRCode Library for Web (代替用) -->
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-  
-  <!-- Firebase Configuration -->
+  <!-- Firebase JS SDK v11.9.1 (ESM) - firebase_core_web が期待するwindow変数に事前設定 -->
+  <!-- flutter_bootstrap.js の前に同期的に完了させる -->
   <script>
-    // Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyAAak1Xn9NM0rhhmLsLT7FOxdHSbzrJcK0",
-      authDomain: "saisunsatsuei-950cf.firebaseapp.com",
-      projectId: "saisunsatsuei-950cf",
-      storageBucket: "saisunsatsuei-950cf.firebasestorage.app",
-      messagingSenderId: "788734188363",
-      appId: "1:788734188363:web:9a8c2c8f89f4554bdda6ce",
-      measurementId: "G-S94RCKLC4M"
+    // firebase_core_web の injectSrcScript と同じ方式で事前ロード
+    // window.firebase_core が存在すれば _initializeCore() はスキップする
+    const _fbVersion = '11.9.1';
+    const _fbBaseUrl = 'https://www.gstatic.com/firebasejs/' + _fbVersion;
+    
+    // window変数名のマッピング: service名 → window変数名
+    const _fbModules = {
+      'app': 'firebase_core',
+      'auth': 'firebase_auth', 
+      'firestore': 'firebase_firestore'
     };
     
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+    // Promise を作成して flutter_bootstrap.js のロード前に完了を保証
+    window._firebaseLoadPromise = (async function() {
+      for (const [mod, windowVar] of Object.entries(_fbModules)) {
+        const url = _fbBaseUrl + '/firebase-' + mod + '.js';
+        try {
+          const m = await import(url);
+          window[windowVar] = m;
+          console.log('✅ Firebase ' + mod + ' pre-loaded → window.' + windowVar);
+        } catch (e) {
+          console.error('❌ Failed to pre-load Firebase ' + mod + ':', e);
+        }
+      }
+    })();
   </script>
   
   <style>
@@ -76,6 +84,19 @@
   </style>
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <!-- Firebase SDKのロード完了を待ってからFlutterを起動 -->
+  <script>
+    (async function() {
+      // Firebase SDKの事前ロード完了を待つ
+      if (window._firebaseLoadPromise) {
+        await window._firebaseLoadPromise;
+        console.log('✅ All Firebase modules ready, starting Flutter...');
+      }
+      // flutter_bootstrap.js を動的にロード
+      const script = document.createElement('script');
+      script.src = 'flutter_bootstrap.js';
+      document.body.appendChild(script);
+    })();
+  </script>
 </body>
 </html>
